--- a/Vektorel.Web/Vektorel.Cinemom/Views/Home/Recent.cshtml
+++ b/Vektorel.Web/Vektorel.Cinemom/Views/Home/Recent.cshtml
@@ -1,1 +1,19 @@
-﻿Yeni filmler
+﻿@model List<Vektorel.Cinemom.Models.Entities.Movie>
+
+<div class="container">
+    @if (Model.Count == 0)
+    {
+        <div class="alert alert-warning" role="alert">
+            Son zamanlarda ne yazık ki yeni film eklenmedi 🤦‍
+        </div>
+    }
+    else
+    {
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+            @foreach (var movie in Model)
+            {
+                <partial name="_MovieCard" for="@movie"></partial>
+            }
+        </div>
+    }
+</div>
