--- a/Vektorel.Web/Vektorel.Cinemom/Views/Shared/_Layout.cshtml
+++ b/Vektorel.Web/Vektorel.Cinemom/Views/Shared/_Layout.cshtml
@@ -1,5 +1,7 @@
 ﻿<html>
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
 </head>
 <body>
@@ -39,7 +41,6 @@
     </header>
     @RenderBody()
     <br />
-    Layout
     <script src="~/js/popper.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
 </body>
