--- a/Vektorel.Web/Vektorel.GameCenter/Views/_ViewImports.cshtml
+++ b/Vektorel.Web/Vektorel.GameCenter/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Vektorel.GameCenter
 @using Vektorel.GameCenter.Models
+@using Vektorel.GameCenter.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
